@startuml SignalRClient
hide empty members
'skinparam linetype ortho

class SyncEvent
{
    + Method : string 
}

class ObjectEvent 
{
    + Identifier : Guid
    + PlayerIndex : int
}

class MoveCardEvent
{
    + Position : Vector2?
    + Zone : ZoneType
}

class NewCardEvent
{
    + Position : Vector2?
    + Card : CardDto?
}

class PlayerStatsEvent
{
    + Health : int?
    + PlayerName : string
    + LibraryCount : int?
}

class TurnChangedEvent
{
    + CurrentPlayerName : string
    + TurnNumber : int
}

class TurnOrderEvent
{
    + PlayersNames : List<string>
    + CurrentPlayerName : string
}

interface ISyncEventListener
{
    + MoveCard(e : MoveCardEvent) : Task
    + NewCard(e : NewCardEvent) : Task
    + UpdatePlayerStats(e : PlayerStatsEvent) : Task
    + TurnChanged(e : TurnChangedEvent) : Task
    + TurnOrderCreated(e : TurnOrderEvent) : Task
}

interface ISyncEventHandler 
{
    + OnMoveCard(e : MoveCardEvent) : void
    + OnNewCard(e : NewCardEvent) : void
    + OnUpdatePlayerStats(e : PlayerStatsEvent) : void
    + OnTurnChanged(e : TurnChangedEvent) : void
    + OnTurnOrderCreated(e : TurnOrderEvent) : void
}

class SignalRClient implements ISyncEventHandler
{
    + {static}Instance : SignalRClient
    - apiURL : Uri
    -  hubName : string
    - connection : HubConnection
    + OnMoveCardEvent : EventHandler<MoveCardEvent>
    + OnNewCardEvent : EventHandler<NewCardEvent>
    + OnPlayerStatsEvent : EventHandler<PlayerStatsEvent>
    + OnTurnChangedEvent : EventHandler<TurnChangedEvent>
    + OnTurnOrderCreatedEvent : EventHandler<TurnOrderEvent>
    + LatestTurnOrder : TurnOrderEvent 
    + LatestTurnChanged : TurnChangedEvent 
    +  Awake() : void
    +  OnMoveCard(e : MoveCardEvent) : void
    +  OnNewCard(e : NewCardEvent) : void
    +  OnUpdatePlayerStats(e : PlayerStatsEvent) : void
    +  Broadcast(e : SyncEvent) : void
    +  OnTurnChanged(e : TurnChangedEvent) : void
    +  OnTurnOrderCreated(e : TurnOrderEvent) : void


}

EventArgs <|-r- SyncEvent
SyncEvent <|-r- ObjectEvent

ObjectEvent <|-u- MoveCardEvent
ObjectEvent <|-u- NewCardEvent
ObjectEvent <|-u- PlayerStatsEvent

SyncEvent <|-u- TurnChangedEvent
SyncEvent <|-u- TurnOrderEvent


SignalRClient .u.> ISyncEventListener

SignalRClient .d.> MoveCardEvent
SignalRClient .d.> NewCardEvent
SignalRClient .d.> PlayerStatsEvent
SignalRClient .d.> TurnChangedEvent
SignalRClient .d.> TurnOrderEvent


@enduml